<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/location_enable"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/tips_red"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:text="@string/enable_location"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/status"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/rescan_button"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16"
        android:text="@string/rescan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_device_list"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/device_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>